# hestia-logger

./: .env.example  404.html  DEBUGGING_FINDINGS.md  DEBUGGING_JOURNEY.md  Dockerfile  Dockerfile.fluentbit  Dockerfile.logger  README.md  TECHSTACK.md  docker-compose.yml  fluent-bit.conf  index.html  kibana.yml  logstash.conf  mkdocs.yml  pyproject.toml  setup_microservices.sh  setup_volume_mounts.sh  test_decorator.py  tox.ini
.github/: .bandit.yml
.github/workflows/: bandit.yml  publish-to-pypi.yml  publish_to_pypi.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
SECURITY/: index.html
SUPPORT/: index.html
architecture/: index.html
configuration/: index.html
demo/: index.html
docs/: LICENSE.md  SECURITY.md  SUPPORT.md  architecture.md  configuration.md  demo.md  index.md  installation.md  prerequisites.md  techstack.md  usage.md  user_guide.md
hestia_logger/: __init__.py  internal_logger.py  main.py
hestia_logger/core/: __init__.py  async_logger.py  config.py  custom_logger.py  formatters.py
hestia_logger/decorators/: __init__.py  decorators.py
hestia_logger/handlers/: __init__.py  console_handler.py  elasticsearch_handler.py  file_handler.py
hestia_logger/logging/: __init__.py  config.py  custom_logger.py  decorators.py  handlers.py  middleware.py  requests.py
hestia_logger/utils/: __init__.py  (+1 more)
installation/: index.html
prerequisites/: index.html
search/: search_index.json
services/: docker-compose.yml  setup_microservices.sh
techstack/: index.html
usage/: index.html
user_guide/: index.html
(+10 files in other folders)
